# IngestIQ

./: .gitignore  CLAUDE.md  IMPROVEMENTS.md  README.md  docker-compose.yml  main.py  pyproject.toml
app/: chunker.py  document_processor.py  enrichment.py  main.py  rag_query.py  vector_store.py
app/parsers/: __init__.py  azure_di_parser.py  base.py  docling_parser.py  textract_parser.py
notebooks/: naive_rag_textract.ipynb
